--- a/src/pages/blog/2018-04-10-почему-дети-плохо-едят.md
+++ b/src/pages/blog/2018-04-10-почему-дети-плохо-едят.md
@@ -8,17 +8,17 @@ description: >-
 tags:
   - дети
 ---
-## Детские диетологи считают, что наладить нормальное питание у ребенка часто мешают ошибки, которые допускают родители. Итак, предлагаем несколько полезных советов мамам и папам , которые не хотели бы иметь проблемы с питанием ребенка. 
+## _Детские диетологи считают, что наладить нормальное питание у ребенка часто мешают ошибки, которые допускают родители. Итак, предлагаем несколько полезных советов мамам и папам , которые не хотели бы иметь проблемы с питанием ребенка. _
 
-# Вовремя отлучайте от груди
+# **Вовремя отлучайте от груди**
 
 ## Закончить с грудным вскармливанием имеет смысл не позднее, чем когда ребенку исполнится полтора года. Более долгое кормление не имеет большого смысла, зато приносит много проблем. Малыш чересчур сильно привязан к маме и совсем незнаком с понятием самостоятельности. В определенном возрасте ребенку уже нужен прикорм, от которого он отказывается, предпочитая грудь. К тому же в грудном молоке после полутора лет уже почти нет ничего ценного и полезного. 
 
-# Грамотно организацией прикорм
+# **Грамотно организацией прикорм**
 
 ## Как только малышу исполнится полгода, нужно начинать прикорм. И важно грамотно его организовать. Дело в том, что многие родители совершают ошибку, начиная прикорм со сладких фруктовых пюре и кошек. Отведав этих лакомство, малыши отказываются от овощей и мясных пюре. Правильно организованный прикорм ведет к правильному рационе в будущем. Поэтому обязательно начинайте с овощных пюре, затем постепенно добавляйте каши. После мясные пюре. И только введя в рацион малыша овощи и мясо, можно дать ему попробовать фруктовые пюре, соки и компоты.
 
-# Этикет с младенчества
+# **Этикет с младенчества**
 
 ## Вводя прикорм, получайте ребенка к элементарным правилам этикета и культуре питания. Купите специальную детскую тарелочку на присоске, набор ложечек и вилочек, которые малыш сам сможет держать. И не превращайте прием пищи в шоу: не надо танцевать перед ним с тарелкой, читать ему стихи, петь песенки и тем более включать мультики. В будущем все это выйдет вам боком: ребенок будет готов есть только перед экраном. Обед - это не развлечение, это всего лишь прием пищи.
 
@@ -28,7 +28,7 @@ tags:
 
 ## 
 
-# Долой перекусы
+# **Долой перекусы**
 
 ## Многие родители любят подкармливать детей во время прогулки. Специально берут с собой детские печенья, сушки и булочки.
 
